syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc VerifyOTP (VerifyOTPRequest) returns (VerifyOTPResponse);
  rpc ResendOTP (ResendOTPRequest) returns (ResendOTPResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetCurrentUser (GetCurrentUserRequest) returns (UserResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc RequestPasswordReset (PasswordResetRequest) returns (PasswordResetResponse);
  rpc ResetPassword (PasswordResetConfirmRequest) returns (ResetPasswordResponse);
  rpc UpdateProfile (UpdateProfileRequest) returns (UserResponse);
  rpc GetProfile (GetProfileRequest) returns (UserResponse);
  rpc GeneratePresignedUrl (GeneratePresignedUrlRequest) returns (GeneratePresignedUrlResponse);
  rpc VerifyRefreshToken (VerifyRefreshTokenRequest) returns (VerifyRefreshTokenResponse);
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc ToggleUserState (ToggleUserStateRequest) returns (ToggleUserStateResponse);
  rpc GetUserFullDetails (GetUserFullDetailsRequest) returns (UserResponse);
}

message UserResponse {
  string id = 1;
  string email = 2;
  string username = 3;
  string name = 4;
  string role = 5;
  bool isVerified = 6;
  string profilePicture = 7;
  string location = 8;
  string bio = 9;
  string createdAt = 10;
  string updatedAt = 11;
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string name = 3;
  string password = 4;
}

message RegisterResponse {
  UserResponse user = 1;
  string message = 2;
}

message VerifyOTPRequest {
  string email = 1;
  string otp = 2;
}

message VerifyOTPResponse {
  UserResponse user = 1;
  string message = 2;
}

message ResendOTPRequest {
  string email = 1;
}

message ResendOTPResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  UserResponse user = 1;
  string message = 2;
}

message GetCurrentUserRequest {
  string userId = 1;
}

message LogoutRequest {
  string userId = 1;
  string accessToken = 2;
  string refreshToken = 3;
}

message LogoutResponse {
  string message = 1;
}

message PasswordResetRequest {
  string email = 1;
}

message PasswordResetResponse {
  string message = 1;
}

message PasswordResetConfirmRequest {
  string token = 1;
  string newPassword = 2;
}

message ResetPasswordResponse {
  string message = 1;
}

message UpdateProfileRequest {
  string userId = 1;
  string name = 2;
  string username = 3;
  string location = 4;
  string bio = 5;
  string profilePicture = 6;
}

message GetProfileRequest {
  string userId = 1;
}

message GeneratePresignedUrlRequest {
  string userId = 1;
  string operation = 2;
  string fileName = 3;
  string fileType = 4;
  string key = 5;
}

message GeneratePresignedUrlResponse {
  string url = 1;
  string key = 2;
  string message = 3;
}

message VerifyRefreshTokenRequest {
  string email = 1;
}

message VerifyRefreshTokenResponse {
  UserResponse user = 1;
  string message = 2;
}

message GetUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  string status = 3;
  string search = 4;
  string date = 5;
}

message GetUsersResponse {
  repeated UserResponse users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message ToggleUserStateRequest {
  string userId = 1;
}

message ToggleUserStateResponse {
  UserResponse user = 1;
  string message = 2;
}

message GetUserFullDetailsRequest {
  string userId = 1;
}